# CifraKTest

./: README.md  docker-compose.yml
docs/: openapi.yaml
server/: Dockerfile  pyproject.toml
server/apps/news/: routers.py
server/apps/news/admin/: __init__.py  news.py  news_type.py
server/apps/news/filters/: news.py
server/apps/news/models/: __init__.py  news.py  news_type.py
server/apps/news/models/managers/: __init__.py  news.py  news_type.py
server/apps/news/models/querysets/: __init__.py  news.py  news_type.py
server/apps/news/serializers/: __init__.py  news.py  news_type.py
server/apps/news/viewsets/: __init__.py  news.py  news_type.py
server/config/: api_urls.py  urls.py
server/config/settings/: installed_apps.py  settings.py
